--- a/public/css/app.css
+++ b/public/css/app.css
@@ -511,8 +511,22 @@ video {
     padding-left: 16px;
   }
 }
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
 .visible {
   visibility: visible;
+}
+.invisible {
+  visibility: hidden;
 }
 .collapse {
   visibility: collapse;
@@ -584,6 +598,9 @@ video {
 .float-right {
   float: right;
 }
+.m-3 {
+  margin: 0.75rem;
+}
 .m-0 {
   margin: 0px;
 }
@@ -614,6 +631,12 @@ video {
   margin-top: 16px;
   margin-bottom: 16px;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
+.ml-auto {
+  margin-left: auto;
+}
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -629,17 +652,11 @@ video {
 .mt-5 {
   margin-top: 1.25rem;
 }
-.ml-auto {
-  margin-left: auto;
-}
 .mt-4 {
   margin-top: 1rem;
 }
 .mr-2 {
   margin-right: 0.5rem;
-}
-.mt-3 {
-  margin-top: 0.75rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
@@ -853,6 +870,9 @@ video {
 .flex-1 {
   flex: 1 1 0%;
 }
+.flex-grow-0 {
+  flex-grow: 0;
+}
 .flex-grow {
   flex-grow: 1;
 }
@@ -1025,14 +1045,14 @@ video {
 .rounded-tr-\[56px\] {
   border-top-right-radius: 56px;
 }
+.border-0 {
+  border-width: 0px;
+}
 .border {
   border-width: 1px;
 }
 .border-2 {
   border-width: 2px;
-}
-.border-0 {
-  border-width: 0px;
 }
 .border-b-2 {
   border-bottom-width: 2px;
@@ -1190,6 +1210,14 @@ video {
 .p-\[8px\] {
   padding: 8px;
 }
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1201,10 +1229,6 @@ video {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 .py-4 {
   padding-top: 1rem;
